<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.xeiam.xchange</groupId>
	<artifactId>xchange-parent</artifactId>
	<version>1.4.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>XChange Parent</name>
	<description>XChange is a Java library providing a simple and consistent API for interacting with a diverse set of financial security exchanges including Bitcoin.</description>

	<url>http://xeiam.com</url>
	<inceptionYear>2012</inceptionYear>

	<organization>
		<name>Xeiam, LLC</name>
		<url>http://xeiam.com</url>
	</organization>

	<developers>
		<developer>
			<name>Tim Molter</name>
		</developer>
		<developer>
			<name>Gary Rowe</name>
			<email>g.rowe@froot.co.uk</email>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>MIT</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
			<comments>All source code is under the MIT license.</comments>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/timmolter/XChange/issues</url>
	</issueManagement>

	<scm>
		<connection>scm:git:git@github.com:timmolter/XChange.git</connection>
		<developerConnection>scm:git:git@github.com:timmolter/XChange.git</developerConnection>
		<url>git@github.com:timmolter/XChange.git</url>
	  <tag>HEAD</tag>
  </scm>

	<ciManagement>
		<url>http://ci.xeiam.com/</url>
	</ciManagement>

	<modules>
		<module>xchange-core</module>
		<module>xchange-mtgox</module>
		<module>xchange-examples</module>
		<module>xchange-cavirtex</module>
		<module>xchange-btce</module>
		<module>xchange-openexchangerates</module>
		<module>xchange-bitstamp</module>
		<module>xchange-campbx</module>
		<module>xchange-bitcoincharts</module>
		<module>xchange-bitcoincentral</module>
	</modules>

	<dependencyManagement>
		<dependencies>

			<!-- Jackson JSON Mapper -->
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-mapper-asl</artifactId>
				<version>1.9.11</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.2</version>
			</dependency>

			<!-- All money handling is through Joda Money -->
			<dependency>
				<groupId>org.joda</groupId>
				<artifactId>joda-money</artifactId>
				<version>0.8</version>
			</dependency>

			<dependency>
				<groupId>javax.ws.rs</groupId>
				<artifactId>jsr311-api</artifactId>
				<version>1.1.1</version>
			</dependency>

			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.0.9</version>
			</dependency>

			<dependency>
				<groupId>com.xeiam.xchart</groupId>
				<artifactId>xchart</artifactId>
				<version>1.3.1</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Ensure compilation is done under Java 6 in all environments -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<!-- Generates a source code JAR during package -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Generates a Javadoc JAR during package -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- for deploying to Maven Central -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<autoversionsubmodules>true</autoversionsubmodules>
				</configuration>
			</plugin>
			<!-- normally don't run the test classes annotated with @OnlineTest -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${version.maven-surefire-plugin}</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>${version.maven-surefire-plugin}</version>
					</dependency>
				</dependencies>
				<configuration>
					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${version.maven-surefire-plugin}</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>${version.maven-surefire-plugin}</version>
					</dependency>
				</dependencies>
				<configuration>
					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<snapshotRepository>
			<id>xeiam_oss.sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>xeiam_oss.sonatype-nexus-staging</id>
			<name>Nexus Release Repository</name>
			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<downloadUrl>https://oss.sonatype.org/content/groups/public/com/xeiam/xchange</downloadUrl>
	</distributionManagement>
	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.4</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<!-- use: mvn clean integration-test -P run-integration-tests -->
		<!-- http://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#groups -->
		<profile>
			<id>run-integration-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.9</version>
						<configuration>
							<skip>false</skip>
							<!-- <skipTests>false</skipTests> -->
							<useFile>false</useFile>
							<argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=512m</argLine>
							<excludes>
								<exclude>none</exclude>
							</excludes>
						</configuration>
						<executions>
							<execution>
								<id>integration-tests</id>
								<phase>integration-test</phase>
								<goals>
									<goal>test</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<version.maven-surefire-plugin>2.13</version.maven-surefire-plugin>
	</properties>

</project>
